# build3-node

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  customSpecRaw.json
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs
scripts/: authorize_node_1_aura.sh  authorize_node_1_grandpa.sh  authorize_node_2_aura.sh  authorize_node_2_grandpa.sh  benchmark.sh  mac_m1_fix.sh  prepare_test_net.sh  start_local_node_1.sh  start_local_node_2.sh
