[package]
name = "build3-node"
version = "0.1.0"
authors = ["Build3 Foundation"]
description = "Build3 foundation node built with substrate framework."
edition = "2021"
license = "Apache-2.0"
homepage = "https://build3.foundation"
repository = "https://github.com/build3foundation/build3-node"
build = "build.rs"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "build3-node"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0", features = ["derive"] }

sc-cli = { git = "https://github.com/paritytech/substrate", package = "sc-cli", features = ["wasmtime"] }
sp-core = { git = "https://github.com/paritytech/substrate", package = "sp-core" }
sc-executor = { git = "https://github.com/paritytech/substrate", package = "sc-executor", features = ["wasmtime"] }
sc-service = { git = "https://github.com/paritytech/substrate", package = "sc-service", features = ["wasmtime"] }
sc-telemetry = { git = "https://github.com/paritytech/substrate", package = "sc-telemetry" }
sc-keystore = { git = "https://github.com/paritytech/substrate", package = "sc-keystore" }
sp-inherents = { git = "https://github.com/paritytech/substrate", package = "sp-inherents" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", package = "sc-transaction-pool" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", package = "sc-transaction-pool-api" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", package = "sc-consensus-aura" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", package = "sp-consensus-aura" }
sp-consensus = { git = "https://github.com/paritytech/substrate", package = "sp-consensus" }
sc-consensus = { git = "https://github.com/paritytech/substrate", package = "sc-consensus" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", package = "sc-finality-grandpa" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", package = "sp-finality-grandpa" }
sc-client-api = { git = "https://github.com/paritytech/substrate", package = "sc-client-api" }

sp-timestamp = { git = "https://github.com/paritytech/substrate", package = "sp-timestamp" }
sp-runtime = { git = "https://github.com/paritytech/substrate", package = "sp-runtime" }

# These dependencies are used for the node's RPCs
jsonrpc-core = "18.0.0"
sc-rpc = { git = "https://github.com/paritytech/substrate", package = "sc-rpc" }
sp-api = { git = "https://github.com/paritytech/substrate", package = "sp-api" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", package = "sc-rpc-api" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", package = "sp-blockchain" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", package = "sp-block-builder" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", package = "sc-basic-authorship" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", package = "substrate-frame-rpc-system" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", package = "pallet-transaction-payment-rpc" }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-rpc" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", package = "frame-benchmarking" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", package = "frame-benchmarking-cli" }

build3-node-runtime = { path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", package = "substrate-build-script-utils" }

[features]
default = []
runtime-benchmarks = [
	"build3-node-runtime/runtime-benchmarks",
]
